tests/ui/suggestions/type-ascription-instead-of-let.stderr
error[E0425]: cannot find value `temp` in this scope
  --> $DIR/type-ascription-instead-of-let.rs:5:9
   |
LL |         temp: i32 = fun(5i32);
   |         ^^^^
   |         |
   |         not found in this scope
   |         help: maybe you meant to write an assignment here: `let temp`

error[E0425]: cannot find value `temp` in this scope
  --> $DIR/type-ascription-instead-of-let.rs:7:9
   |
LL |         temp + value + 1
   |         ^^^^ not found in this scope

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0425`.
